Currently running into an infinite loop, I think (?)

--- a/cuda/README
+++ b/cuda/README
@@ -1,6 +1,14 @@
 # CUDA CODE FOR GROUP 7
 ### Elliot Potter, Boxian Wang, Eric (Spencer) Warezak
 
+## What code is from what sources?
+We used two main sources:
+1. The original Ray Tracing in One Weekend: https://raytracing.github.io/books/RayTracingInOneWeekend.html#surfacenormalsandmultipleobjects/commonconstantsandutilityfunctions
+2. The NVIDIA blog on converting to CUDA: https://developer.nvidia.com/blog/accelerated-ray-tracing-cuda/
+
+sections 1-4 are almost entirely derived from the two sources.
+The remaining sections are converted from the Ray Tracing in One Weekend book.
+
 ## Compilation Instructions
 
 
